# job-tracking

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  JOB_TRACKER_JOURNEY.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 47530de69031_baseline.py  a1b2c3d4e5f6_add_user_id_to_ai_prompts_and_prospect_questions.py  b2c3d4e5f6a7_add_user_id_to_application_child_tables.py  c3d4e5f6a7b8_add_user_secrets_table.py
backend/app/: __init__.py  config.py  db.py  main.py  reset_db.py
backend/app/api/: ai_settings.py  analytics.py  application_documents.py  application_prospect.py  applications.py  auth.py  companies.py  cover_letters.py  cv_profile.py  cv_versions.py  deps.py  entities.py  health.py  learning.py  notes.py  projects.py  prospect.py  recruiters.py  reset.py  roles.py  stages.py
backend/app/models/: __init__.py  ai_prompt.py  application.py  application_document.py  application_note.py  application_prospect_answer.py  application_swot_analysis.py  company.py  company_note.py  cover_letter_version.py  cv_experience.py  cv_profile.py  cv_version.py  job_description.py  learning_concept.py  learning_item.py  project.py  prospect_question.py  recruiter.py  recruiter_note.py  role.py  stage.py  tag.py  user.py  user_secret.py
backend/app/schemas/: __init__.py  application.py  application_document.py  company.py  learning.py  project.py  recruiter.py  reset_ops.py  role.py  stage.py
backend/app/services/: app_document_storage.py  auth.py  blob_storage.py  cv_export.py  cv_parser.py  db_backup.py  docx_from_text.py  file_responses.py  learning_cleanup.py  openai_client.py  secret_crypto.py  storage.py  (+4 more)
backend/scripts/: create_postgres_schema.py  migrate_application_documents.py  migrate_sqlite_to_postgres.py  migration_utils.py  upload_storage_to_supabase.py  verify_migration.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_blob_storage.py  test_health.py  test_learning.py  test_stages.py  test_user_secrets.py
(+90 files in other folders)
