[tool.poetry]
name = "job-tracking-backend"
version = "0.1.0"
description = "Job tracking API - CV versions, tailored applications, pipeline stages"
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
authlib = "^1.3"
httpx = "^0.26"
itsdangerous = "^2.1"
python-jose = {extras = ["cryptography"], version = "^3.3"}
python-multipart = "^0.0.9"
openai = "^1.0"
python-docx = "^1.0"
pypdf = "^3.0"
weasyprint = ">=62.0"
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pre-commit = "^4.5.1"
ruff = "0.6.9"
black = "24.8.0"
mypy = "1.11.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "E501", # line length; formatter handles layout
    "B008", # FastAPI Depends() / File() in defaults — intentional
    "B904", # raise in except — prefer explicit style later
]
[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"scripts/migrate_application_documents.py" = ["E402"]
"scripts/*.py" = ["E402"]
"alembic/env.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "dict-item",
    "index",
    "misc",
    "union-attr",
    "var-annotated",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
